--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,7 +9,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build-on-linux"
   build-on-linux:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -25,9 +24,13 @@ jobs:
           echo test, and deploy your project.
           date
   build-on-windows:
-    runs-on: windows-lastest
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Hello, world!
+          echo Add other actions to build,
+          echo test, and deploy your project.
           Get-Date
