--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -24,6 +24,8 @@ jobs:
           echo test, and deploy your project.
           date
   build-on-windows:
+    if: ${{success()}}
+    needs: [build-on-linux]
     # The type of runner that the job will run on
     runs-on: windows-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
